add libx11-dev to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ addons:
       - libavfilter-dev
       - libcairo2-dev
       - libxt-dev
+      - libx11-dev
     sources:
       - sourceline: 'ppa:cran/ffmpeg-4'
       - sourceline: 'ppa:cran/ffmpeg-3'
