add r-cran-cairo to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ addons:
       - libcairo2-dev
       - libxt-dev
       - libx11-dev
+      - r-cran-cairo
     sources:
       - sourceline: 'ppa:cran/ffmpeg-4'
       - sourceline: 'ppa:cran/ffmpeg-3'
