--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export(info_video)
 export(load_video)
-importFrom(av,av_video_info)
 importFrom(checkmate,assert_access)
 importFrom(checkmate,assert_numeric)
 importFrom(imager,load.video)
+importFrom(stringi,stri_detect)
+importFrom(stringi,stri_extract_first)
+importFrom(stringi,stri_split)
