--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,8 @@ Depends:
 Imports: 
     checkmate (>= 1.9.1),
     stringi
+Suggests:
+    testthat (>= 2.0.0)
 URL: https://github.com/ShotaOchi/videor
 BugReports: https://github.com/ShotaOchi/videor/issues
 NeedsCompilation: no
