try to use ffmpeg on appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,9 +8,10 @@ init:
         Import-Module '..\appveyor-tool.ps1'
 
 install:
-  -cinst ffmpeg
   ps: Bootstrap
 
+install:
+  - cinst ffmpeg
 
 cache:
   - C:\RLibrary
