--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Suggests:
 URL: https://github.com/ShotaOchi/videor
 BugReports: https://github.com/ShotaOchi/videor/issues
 NeedsCompilation: no
-SystemRequirements: FFmpeg
+SystemRequirements: FFmpeg, FFprobe
 LazyData: true
 RoxygenNote: 7.0.2
 Encoding: UTF-8
